js/js.translator/testData/incremental/invalidationWithPL/changeFunctionSignature/lib1/l1.1.kt
fun foo(x: Int) = x + 1
